--- a/paperplane.html
+++ b/paperplane.html
@@ -72,7 +72,7 @@
     subtree: true, // 观察所有后代节点
   });
 
-  // 事件绑定函数（使用类型断言）
+  // 事件绑定函数
   function bindClickListener(element: HTMLElement) {
     element.addEventListener("click", handleButtonClick);
   }
